@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Find</class>
- <widget class="QDialog" name="Find">
+ <class>FindDialog</class>
+ <widget class="QDialog" name="FindDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
